style.css
:root {
    --blue: #0081c7;
    --dark-blue: #005b8f;
    --gold: #ffcc00;
    --white: #ffffff;
}

body {
    background-color: var(--blue);

    background-image: url("pattern.svg");
    background-repeat: repeat;
    background-size:100px;

    color: var(--white);
    font-family: "Poppins", sans-serif;
}

h1 {
    font-size: 48px
}

p {
    font-size: 20px
}

img {
    width: 250px;
    height: auto;
    border-radius: 10px
}

a {
    color:yellow;
    text-decoration: none
}

a:hover {
    color:orange
}

.warning{
    background: #ffcc00;
    color: black;
    text-align: center;
    padding: 10px;
    font-weight: bold;
}

header{
    background: var(--dark-blue);
    padding: 20px 25px;
    position: sticky;
    text-align: center;
    top: 0;
    z-index: 1000;
}

nav {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 40px;
}

nav a{
    color: white;
    text-decoration: none;
    font-weight: 600;
}

nav a:hover{
    color: var(--gold);
}

section {
    margin: 60px auto;
    width: 80%
}

.hero {
    height: 100vh;
    width: 100%;

    background-image: url("https://cdn.pixabay.com/photo/2020/01/29/06/39/boy-4801688_1280.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;

    display: flex;
    align-items: center;
    padding-left: 10%;

    position: relative;
}

.hero::before {
    content: "";
    position: absolute;
    inset: 0;
    background: rgba(0,0,0,0.35);
}

.hero-text {
    position: relative;
    color: white;
    z-index: 1;
}

.hero-text h1 {
    font-size: 80px;
    line-height: 0.95;
    margin: 10px 0;
    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
}

.content-card {
    width: 85%;
    max-width: 1100px;
    margin: 60px auto;

    background: rgba(0, 91, 143, 0.75);
    border: 2px solid rgba(255,255,255,.15);
    backdrop-filter: blur(10px);

    border-radius: 20px;
    padding: 40px;

    box-shadow: 0 10px 30px rgba(0, 0, 0, .2);
}

.intro {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 40px;
}

.intro-text {
    flex: 1;
}

.intro-text h2 {
    margin-top: 0;
    font-size: 42px;
}

.intro-text p {
    font-size: 20px;
    line-height: 1.7;
}

.intro-text img {
    width: 200px;
    border-radius: 16px;
    display: block;
}

@media (max-width: 800px) {
    .intro-card {
        flex-direction: column;
        text-align: center;
    }
    .intro-image img {
        width: 220px;
    }
}

.funny {
    width: fit-content;
    margin: 60px auto;

    background: rgba(255, 255, 255, 0.12);
    backdrop-filter: blur(10px);

    border-radius: 20px;
    padding: 20px;

    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
}

.funny img {
    display: block;
    width: 500px;
    max-width: 100%;
    border-radius: 12px;
}

.achievement {
    text-align: center;
}

.achievement-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
    margin-top: 40px;
}

.achievement img {
    width: 100%;
    height: 220px;

    object-fit: cover;

    border-radius: 12px;

    display: block;
}

.achievement h3 {
    margin-top: 18px;
    margin-bottom: 10px;
}

.achievement p {
    font-size: 18px;
}

@media (max-width: 900px) {
    .achievement-grid {
        grid-template-columns: 1fr;
    }
}

